592067:TISSQAUAT-732:UI alignment of "Sort by" section is not proper in iOS 6 plus device fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -62982,7 +62982,7 @@ body.page-productGrid .facet-list.filter-opt {
 	.sort_by_wrapper.pagination-bar.listing-menu.bottom{
 	display:none;}
 }
-@media(max-width:424px){
+@media(max-width:408px){
 	.list_title_sort select{
 	float: left !important;
     left: -15px;
